syntax = "proto3";

package pricefeed;

option go_package = "github.com/chiyonn/swarmyard/api/proto/pricefeed";

service PriceFeed {
  rpc SubscribePrices(PriceRequest) returns (stream PriceSnapshotList);
}

message PriceRequest {
  string base = 1;
}

message PriceSnapshotList {
  string base = 1;
  repeated PriceSnapshot rates = 2;
  int64 timestamp = 3;
}

message PriceSnapshot {
  string pair = 1;
  double price = 2;
  int64 timestamp = 3;
}
